# rust_pong

./: Cargo.toml
msvc/lib/32/: SDL2_gfx.lib
msvc/lib/64/: SDL2_gfx.lib
src/: main.rs
src/lib/: command.rs  entity.rs  lib.rs
src/lib/graphic/: draw_handler.rs  input_handler.rs  mod.rs  update_handler.rs  video.rs
src/lib/mut_shared_collection/: mod.rs  test.rs
src/lib/physic/: bounding_box.rs  mod.rs  position.rs
