[package]
name = "rust_pong"
version = "0.1.0"
authors = ["Johannes Lüke <lueke.Johannes@googlemail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.sdl2]
version = "0.34.1"
default-features = false
features = ["gfx"]

[lib]
path ="./src/lib/lib.rs"
